Fixed hidden scrollbar

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -17,7 +17,6 @@ body {
   background-size: 400% 400%;
   animation: gradient 4s ease infinite;
   height: 100vh;
-  overflow: hidden;
 }
 
 @keyframes gradient {
